log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-volume
          emptyDir: {}
        - name: config-volume
          configMap:
            name: log-output-configmap  
      containers:
        - name: log-output
          image: lsxol/log-output:latest
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/src/app/files
        - name: log-reader
          image: lsxol/log-reader:latest
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/src/app/files
            - name: config-volume
              mountPath: /usr/src/app/config
