log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: log-output-ingress
spec:
  rules:
    - http:
        paths:
          - path: /log_output
            pathType: Prefix
            backend:
              service:
                name: log-output-service
                port:
                  number: 2345
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-service
                port:
                  number: 80
